--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=
+spring.datasource.password=
+
 spring.application.name=jdbc
+
+//application.properties? Spring Framework?? ??????? ?? ??? ?? ?? ??
